--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "firebase": "^2.2.9",
     "react": "^0.13.3"
   },
   "devDependencies": {
